tests/negative/type_call_undefined.uzpp
// XATOLIK_KUTILMOQDA: cpp_level: e'lon qilinmagan funksiya chaqiruvi
ulash "uzpp_runtime.hpp"
butun asosiy() {
    notanish_funksiya(42);
    qaytarish 0;
}
